--- a/Circular/en.lproj/iPhone_i5.storyboard
+++ b/Circular/en.lproj/iPhone_i5.storyboard
@@ -69,7 +69,7 @@
             </objects>
             <point key="canvasLocation" x="98" y="179"/>
         </scene>
-        <!--Feeds Cell View Controller - Feeds-->
+        <!--Feeds Cell View Controller-->
         <scene sceneID="koo-92-sKD">
             <objects>
                 <tableViewController id="Irk-LD-J80" customClass="FeedsCellViewController" sceneMemberID="viewController">
@@ -92,13 +92,16 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Feeds" id="Oay-HB-X6S">
-                        <barButtonItem key="leftBarButtonItem" title="( )" id="N85-pO-VxE">
+                    <navigationItem key="navigationItem" id="Oay-HB-X6S">
+                        <barButtonItem key="leftBarButtonItem" title=" " id="N85-pO-VxE">
                             <connections>
                                 <action selector="revealMenu:" destination="Irk-LD-J80" id="A3X-VP-OeU"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="barItem" destination="N85-pO-VxE" id="O2L-Ty-7Cz"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ThS-I4-KkY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -136,6 +139,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
+                        <outlet property="topBar" destination="4f3-b1-POW" id="pQ5-gC-qK2"/>
                         <segue destination="Irk-LD-J80" kind="relationship" relationship="rootViewController" id="Tjn-l8-Emf"/>
                     </connections>
                 </navigationController>
@@ -213,6 +217,7 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/FeedsCellViewController.h"/>
             <relationships>
                 <relationship kind="action" name="revealMenu:"/>
+                <relationship kind="outlet" name="barItem" candidateClass="UIBarButtonItem"/>
             </relationships>
         </class>
         <class className="InitialSlidingViewController" superclassName="ECSlidingViewController">
@@ -223,6 +228,9 @@
         </class>
         <class className="NavigationTopViewController" superclassName="UINavigationController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NavigationTopViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="topBar" candidateClass="UINavigationBar"/>
+            </relationships>
         </class>
         <class className="ProfileViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ProfileViewController.h"/>
