Link Setting button to SettingViewController

--- a/Circular/en.lproj/iPhone4.storyboard
+++ b/Circular/en.lproj/iPhone4.storyboard
@@ -58,6 +58,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="y0F-R4-Yta" kind="modal" modalTransitionStyle="coverVertical" id="FXo-23-Tuh"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
