--- a/Circular/en.lproj/iPhone4.storyboard
+++ b/Circular/en.lproj/iPhone4.storyboard
@@ -27,12 +27,12 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="89H-Q5-rki">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="89H-Q5-rki">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="417"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" restorationIdentifier="MenuItemCell" selectionStyle="blue" indentationWidth="10" reuseIdentifier="MenuItemCell" id="vH1-RT-6JO">
+                                    <tableViewCell contentMode="scaleToFill" restorationIdentifier="MenuItemCell" selectionStyle="gray" indentationWidth="10" reuseIdentifier="MenuItemCell" id="vH1-RT-6JO">
                                         <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -48,7 +48,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="dnA-Pp-XuL">
-                                <rect key="frame" x="0.0" y="417" width="281" height="44"/>
+                                <rect key="frame" x="0.0" y="418" width="320" height="43"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Setting">
@@ -66,12 +66,15 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="89H-Q5-rki" id="rBC-BX-PJB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DFO-jg-aFo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="84" y="-173"/>
         </scene>
-        <!--Feeds Cell View Controller-->
+        <!--Feeds Cell View Controller -  -->
         <scene sceneID="xya-ku-qoO">
             <objects>
                 <tableViewController id="IDU-iN-sRL" customClass="FeedsCellViewController" sceneMemberID="viewController">
@@ -94,7 +97,7 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
-                    <navigationItem key="navigationItem" id="VJF-ia-u2L">
+                    <navigationItem key="navigationItem" title=" " id="VJF-ia-u2L">
                         <barButtonItem key="leftBarButtonItem" title=" " id="2xV-7Q-4YW">
                             <connections>
                                 <action selector="revealMenu:" destination="IDU-iN-sRL" id="95l-wc-DH2"/>
@@ -127,7 +130,7 @@
         <!--Navigation Top View Controller-->
         <scene sceneID="eoe-O0-V3Y">
             <objects>
-                <navigationController storyboardIdentifier="FeedNews" definesPresentationContext="YES" id="mvN-6L-nZJ" customClass="NavigationTopViewController" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="News Feed" definesPresentationContext="YES" id="mvN-6L-nZJ" customClass="NavigationTopViewController" sceneMemberID="viewController">
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="kvl-wx-QlG">
                         <autoresizingMask key="autoresizingMask"/>
@@ -175,10 +178,10 @@
             </objects>
             <point key="canvasLocation" x="594" y="512"/>
         </scene>
-        <!--View Controller-->
+        <!--Setting Controller-->
         <scene sceneID="cjT-0n-d2d">
             <objects>
-                <viewController id="y0F-R4-Yta" sceneMemberID="viewController">
+                <viewController id="y0F-R4-Yta" customClass="SettingController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Yhw-l5-EcN">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -187,8 +190,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Settings" id="LTR-cL-NJU">
-                                        <barButtonItem key="leftBarButtonItem" title="Back" id="eK4-Bo-DXe">
+                                    <navigationItem title=" " id="LTR-cL-NJU">
+                                        <barButtonItem key="leftBarButtonItem" title=" " id="eK4-Bo-DXe">
                                             <connections>
                                                 <segue destination="JaO-et-l56" kind="modal" modalTransitionStyle="crossDissolve" id="GuF-9y-Lg6"/>
                                             </connections>
@@ -200,6 +203,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="barItem" destination="eK4-Bo-DXe" id="yRR-jN-unl"/>
+                        <outlet property="topBar" destination="e07-o6-izV" id="7dY-iO-dvk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8HV-wI-haZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -225,6 +232,9 @@
         </class>
         <class className="MenuViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MenuViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
         </class>
         <class className="NavigationTopViewController" superclassName="UINavigationController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NavigationTopViewController.h"/>
@@ -236,6 +246,13 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ProfileViewController.h"/>
             <relationships>
                 <relationship kind="action" name="revealMenu:"/>
+                <relationship kind="outlet" name="barItem" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="topBar" candidateClass="UINavigationBar"/>
+            </relationships>
+        </class>
+        <class className="SettingController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingController.h"/>
+            <relationships>
                 <relationship kind="outlet" name="barItem" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="topBar" candidateClass="UINavigationBar"/>
             </relationships>
