--- a/Circular/en.lproj/iPhone5.storyboard
+++ b/Circular/en.lproj/iPhone5.storyboard
@@ -26,12 +26,12 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="rPv-cA-tTl">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="rPv-cA-tTl">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="502"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" restorationIdentifier="MenuItemCell" selectionStyle="blue" indentationWidth="10" reuseIdentifier="MenuItemCell" id="Cr1-wV-Aga">
+                                    <tableViewCell contentMode="scaleToFill" restorationIdentifier="MenuItemCell" selectionStyle="gray" indentationWidth="10" reuseIdentifier="MenuItemCell" id="Cr1-wV-Aga">
                                         <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -47,7 +47,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nr4-xW-ECd">
-                                <rect key="frame" x="0.0" y="504" width="281" height="44"/>
+                                <rect key="frame" x="0.0" y="503" width="320" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Setting">
@@ -64,6 +64,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="rPv-cA-tTl" id="pWQ-Y0-LGU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bqj-ka-qlX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -134,7 +137,7 @@
         <!--Navigation Top View Controller-->
         <scene sceneID="T5d-cO-OJ6">
             <objects>
-                <navigationController storyboardIdentifier="FeedNews" definesPresentationContext="YES" id="VJg-Dc-cS1" customClass="NavigationTopViewController" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="News Feed" definesPresentationContext="YES" id="VJg-Dc-cS1" customClass="NavigationTopViewController" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="4f3-b1-POW">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -180,10 +183,10 @@
             </objects>
             <point key="canvasLocation" x="602" y="864"/>
         </scene>
-        <!--View Controller-->
+        <!--Setting Controller-->
         <scene sceneID="FRh-RD-0bL">
             <objects>
-                <viewController id="lBH-LN-MNO" sceneMemberID="viewController">
+                <viewController id="lBH-LN-MNO" customClass="SettingController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UCu-vy-1IF">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -192,8 +195,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Settings" id="LI9-wh-ZWT">
-                                        <barButtonItem key="leftBarButtonItem" title="Back" id="eWV-fa-KaG">
+                                    <navigationItem title=" " id="LI9-wh-ZWT">
+                                        <barButtonItem key="leftBarButtonItem" title=" " id="eWV-fa-KaG">
                                             <connections>
                                                 <segue destination="2" kind="modal" modalTransitionStyle="crossDissolve" id="ONN-XQ-lUK"/>
                                             </connections>
@@ -204,6 +207,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="barItem" destination="eWV-fa-KaG" id="lDW-VU-qAo"/>
+                        <outlet property="topBar" destination="oV0-eL-0uH" id="y2V-i6-u7I"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ASq-hP-x3d" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -229,6 +236,9 @@
         </class>
         <class className="MenuViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MenuViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
         </class>
         <class className="NavigationTopViewController" superclassName="UINavigationController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NavigationTopViewController.h"/>
@@ -240,6 +250,13 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ProfileViewController.h"/>
             <relationships>
                 <relationship kind="action" name="revealMenu:"/>
+                <relationship kind="outlet" name="barItem" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="topBar" candidateClass="UINavigationBar"/>
+            </relationships>
+        </class>
+        <class className="SettingController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingController.h"/>
+            <relationships>
                 <relationship kind="outlet" name="barItem" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="topBar" candidateClass="UINavigationBar"/>
             </relationships>
