--- a/Circular/en.lproj/iPhone4.storyboard
+++ b/Circular/en.lproj/iPhone4.storyboard
@@ -28,7 +28,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="89H-Q5-rki">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="417"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -47,21 +47,6 @@
                                     <outlet property="delegate" destination="dJx-9N-6Nn" id="7FA-qa-8hw"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="dnA-Pp-XuL">
-                                <rect key="frame" x="0.0" y="418" width="320" height="43"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Setting">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="y0F-R4-Yta" kind="modal" modalTransitionStyle="coverVertical" id="FXo-23-Tuh"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -136,7 +121,6 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <outlet property="topBar" destination="kvl-wx-QlG" id="yI0-ey-EFf"/>
                         <segue destination="IDU-iN-sRL" kind="relationship" relationship="rootViewController" id="ty5-nX-kGE"/>
                     </connections>
                 </navigationController>
@@ -181,7 +165,7 @@
         <!--Setting Controller-->
         <scene sceneID="cjT-0n-d2d">
             <objects>
-                <viewController id="y0F-R4-Yta" customClass="SettingController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Account Setting" id="y0F-R4-Yta" customClass="SettingController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Yhw-l5-EcN">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -193,7 +177,7 @@
                                     <navigationItem title=" " id="LTR-cL-NJU">
                                         <barButtonItem key="leftBarButtonItem" title=" " id="eK4-Bo-DXe">
                                             <connections>
-                                                <segue destination="JaO-et-l56" kind="modal" modalTransitionStyle="crossDissolve" id="GuF-9y-Lg6"/>
+                                                <action selector="revealMenu:" destination="y0F-R4-Yta" id="Pod-Cm-wlH"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -238,9 +222,6 @@
         </class>
         <class className="NavigationTopViewController" superclassName="UINavigationController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NavigationTopViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="topBar" candidateClass="UINavigationBar"/>
-            </relationships>
         </class>
         <class className="ProfileViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ProfileViewController.h"/>
@@ -253,6 +234,7 @@
         <class className="SettingController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingController.h"/>
             <relationships>
+                <relationship kind="action" name="revealMenu:"/>
                 <relationship kind="outlet" name="barItem" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="topBar" candidateClass="UINavigationBar"/>
             </relationships>
