--- a/Circular/en.lproj/iPhone5.storyboard
+++ b/Circular/en.lproj/iPhone5.storyboard
@@ -27,7 +27,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="rPv-cA-tTl">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="502"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -46,21 +46,6 @@
                                     <outlet property="delegate" destination="HNz-Vg-hu0" id="6In-Zx-5KA"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nr4-xW-ECd">
-                                <rect key="frame" x="0.0" y="503" width="320" height="46"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Setting">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="lBH-LN-MNO" kind="modal" modalTransitionStyle="coverVertical" id="jAM-Q3-fx6"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -142,7 +127,6 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <outlet property="topBar" destination="4f3-b1-POW" id="pQ5-gC-qK2"/>
                         <segue destination="Irk-LD-J80" kind="relationship" relationship="rootViewController" id="Tjn-l8-Emf"/>
                     </connections>
                 </navigationController>
@@ -186,7 +170,7 @@
         <!--Setting Controller-->
         <scene sceneID="FRh-RD-0bL">
             <objects>
-                <viewController id="lBH-LN-MNO" customClass="SettingController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Account Setting" id="lBH-LN-MNO" customClass="SettingController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UCu-vy-1IF">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -198,7 +182,7 @@
                                     <navigationItem title=" " id="LI9-wh-ZWT">
                                         <barButtonItem key="leftBarButtonItem" title=" " id="eWV-fa-KaG">
                                             <connections>
-                                                <segue destination="2" kind="modal" modalTransitionStyle="crossDissolve" id="ONN-XQ-lUK"/>
+                                                <action selector="revealMenu:" destination="lBH-LN-MNO" id="Nl6-Pu-fAt"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -242,9 +226,6 @@
         </class>
         <class className="NavigationTopViewController" superclassName="UINavigationController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NavigationTopViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="topBar" candidateClass="UINavigationBar"/>
-            </relationships>
         </class>
         <class className="ProfileViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ProfileViewController.h"/>
@@ -257,6 +238,7 @@
         <class className="SettingController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingController.h"/>
             <relationships>
+                <relationship kind="action" name="revealMenu:"/>
                 <relationship kind="outlet" name="barItem" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="topBar" candidateClass="UINavigationBar"/>
             </relationships>
